[gd_scene load_steps=11 format=2]

[ext_resource path="res://Grid/Mesh_library.tres" type="MeshLibrary" id=1]
[ext_resource path="res://Camera/camera_control.gd" type="Script" id=2]
[ext_resource path="res://Unit.tscn" type="PackedScene" id=3]
[ext_resource path="res://Grid/GridSelector.gd" type="Script" id=4]
[ext_resource path="res://Grid/GameMap.gd" type="Script" id=5]
[ext_resource path="res://Ui.gd" type="Script" id=6]
[ext_resource path="res://Grid/Overlay_mesh_library.tres" type="MeshLibrary" id=7]
[ext_resource path="res://Grid/GameMapOverlay.gd" type="Script" id=8]
[ext_resource path="res://LevelManager.gd" type="Script" id=9]
[ext_resource path="res://UnitElement.tscn" type="PackedScene" id=10]

[node name="LevelManager" type="Spatial"]
script = ExtResource( 9 )
unit_scene = ExtResource( 3 )
_game_map = NodePath("GameMap")
_game_overlay_map = NodePath("GameMapOverlay")

[node name="GameMap" type="GridMap" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00783014, 0, 0.0174651 )
mesh_library = ExtResource( 1 )
collision_layer = 3
data = {
"cells": PoolIntArray( 0, 0, 0, 1, 0, 1, 2, 0, 0, 3, 0, 1, 4, 0, 0, 5, 0, 0, 65526, 0, 0, 65527, 0, 0, 65528, 0, 0, 65529, 0, 1, 65530, 0, 0, 65531, 0, 1, 65532, 0, 0, 65533, 0, 1, 65534, 0, 0, 65535, 0, 1, 0, 1, 1, 1, 1, 0, 2, 1, 1, 3, 1, 0, 4, 1, 0, 5, 1, 0, 65526, 1, 0, 65527, 1, 0, 65528, 1, 1, 65529, 1, 0, 65530, 1, 1, 65531, 1, 0, 65532, 1, 1, 65533, 1, 0, 65534, 1, 1, 65535, 1, 0, 0, 2, 0, 1, 2, 1, 2, 2, 0, 3, 2, 1, 4, 2, 0, 5, 2, 0, 65526, 2, 0, 65527, 2, 0, 65528, 2, 0, 65529, 2, 1, 65530, 2, 0, 65531, 2, 1, 65532, 2, 0, 65533, 2, 1, 65534, 2, 0, 65535, 2, 1, 0, 3, 0, 1, 3, 0, 2, 3, 1, 3, 3, 0, 4, 3, 0, 5, 3, 0, 65526, 3, 0, 65527, 3, 0, 65528, 3, 0, 65529, 3, 0, 65530, 3, 0, 65531, 3, 0, 65532, 3, 0, 65533, 3, 0, 65534, 3, 0, 65535, 3, 0, 0, 4, 1, 1, 4, 0, 2, 4, 0, 3, 4, 0, 4, 4, 0, 5, 4, 0, 65526, 4, 0, 65527, 4, 0, 65528, 4, 0, 65529, 4, 0, 65530, 4, 0, 65531, 4, 0, 65532, 4, 0, 65533, 4, 0, 65534, 4, 0, 65535, 4, 0, 0, 5, 0, 1, 5, 1, 2, 5, 0, 3, 5, 0, 4, 5, 0, 5, 5, 0, 65526, 5, 0, 65527, 5, 0, 65528, 5, 0, 65529, 5, 0, 65530, 5, 0, 65531, 5, 0, 65532, 5, 0, 65533, 5, 0, 65534, 5, 0, 65535, 5, 0, 0, 6, 0, 1, 6, 0, 2, 6, 0, 3, 6, 0, 4, 6, 0, 5, 6, 0, 65526, 6, 0, 65527, 6, 0, 65528, 6, 0, 65529, 6, 0, 65530, 6, 0, 65531, 6, 0, 65532, 6, 0, 65533, 6, 0, 65534, 6, 0, 65535, 6, 0, 0, 7, 0, 1, 7, 0, 2, 7, 0, 3, 7, 0, 4, 7, 0, 5, 7, 0, 65526, 7, 0, 65527, 7, 0, 65528, 7, 0, 65529, 7, 0, 65530, 7, 0, 65531, 7, 0, 65532, 7, 0, 65533, 7, 0, 65534, 7, 0, 65535, 7, 0, 0, 65529, 0, 1, 65529, 0, 2, 65529, 0, 3, 65529, 0, 4, 65529, 0, 5, 65529, 0, 65526, 65529, 0, 65527, 65529, 0, 65528, 65529, 0, 65529, 65529, 0, 65530, 65529, 0, 65531, 65529, 0, 65532, 65529, 0, 65533, 65529, 0, 65534, 65529, 0, 65535, 65529, 0, 0, 65530, 0, 1, 65530, 0, 2, 65530, 0, 3, 65530, 0, 4, 65530, 0, 5, 65530, 0, 65526, 65530, 0, 65527, 65530, 0, 65528, 65530, 0, 65529, 65530, 0, 65530, 65530, 0, 65531, 65530, 0, 65532, 65530, 0, 65533, 65530, 0, 65534, 65530, 0, 65535, 65530, 0, 0, 65531, 0, 1, 65531, 0, 2, 65531, 0, 3, 65531, 0, 4, 65531, 0, 5, 65531, 0, 65526, 65531, 0, 65527, 65531, 0, 65528, 65531, 0, 65529, 65531, 0, 65530, 65531, 0, 65531, 65531, 0, 65532, 65531, 0, 65533, 65531, 0, 65534, 65531, 0, 65535, 65531, 0, 0, 65532, 0, 1, 65532, 0, 2, 65532, 0, 3, 65532, 0, 4, 65532, 0, 5, 65532, 0, 65526, 65532, 0, 65527, 65532, 0, 65528, 65532, 0, 65529, 65532, 0, 65530, 65532, 0, 65531, 65532, 0, 65532, 65532, 0, 65533, 65532, 0, 65534, 65532, 0, 65535, 65532, 0, 0, 65533, 1, 1, 65533, 0, 2, 65533, 1, 3, 65533, 0, 4, 65533, 0, 5, 65533, 0, 65526, 65533, 0, 65527, 65533, 0, 65528, 65533, 0, 65529, 65533, 1, 65530, 65533, 1, 65531, 65533, 0, 65532, 65533, 1, 65533, 65533, 0, 65534, 65533, 1, 65535, 65533, 0, 0, 65534, 0, 1, 65534, 1, 2, 65534, 0, 3, 65534, 1, 4, 65534, 0, 5, 65534, 0, 65526, 65534, 0, 65527, 65534, 0, 65528, 65534, 0, 65529, 65534, 1, 65530, 65534, 0, 65531, 65534, 1, 65532, 65534, 0, 65533, 65534, 1, 65534, 65534, 0, 65535, 65534, 1, 0, 65535, 1, 1, 65535, 0, 2, 65535, 1, 3, 65535, 0, 4, 65535, 0, 5, 65535, 0, 65526, 65535, 0, 65527, 65535, 0, 65528, 65535, 1, 65529, 65535, 0, 65530, 65535, 1, 65531, 65535, 0, 65532, 65535, 1, 65533, 65535, 0, 65534, 65535, 1, 65535, 65535, 0 )
}
script = ExtResource( 5 )
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}
_overlay_map = NodePath("../GameMapOverlay")

[node name="GameMapOverlay" type="GridMap" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.20618, 0 )
mesh_library = ExtResource( 7 )
script = ExtResource( 8 )
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="Camera" type="Camera" parent="."]
transform = Transform( -3.93436e-08, 0.435734, -0.900076, 1.90465e-08, 0.900076, 0.435734, 1, -1.77636e-15, -4.37114e-08, -15.9265, 10.4471, -3.04888 )
current = true
script = ExtResource( 2 )
mouse_mode = 0
freelook = false
_ui_parent = NodePath("../UI")

[node name="GridSelector" type="Spatial" parent="Camera"]
transform = Transform( 1, -7.34463e-09, 0, -7.45058e-09, 1, 0, -7.45058e-09, -1.28194e-11, 1, 0, 0, 0 )
script = ExtResource( 4 )
grid = NodePath("../../GameMap")
collision_mask = 2

[node name="RayCast" type="RayCast" parent="Camera/GridSelector"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.76837e-07, 0, 0 )
enabled = true

[node name="Units" type="Spatial" parent="."]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="MarginContainer2" type="MarginContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="UI/MarginContainer2"]
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer2/MarginContainer"]
margin_right = 1920.0
margin_bottom = 1080.0
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer2/MarginContainer/VBoxContainer"]
margin_top = 937.0
margin_right = 1920.0
margin_bottom = 1080.0
alignment = 1

[node name="UnitElement" parent="UI/MarginContainer2/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 834.0
margin_right = 894.0
margin_bottom = 143.0
label_text = "1"

[node name="UnitElement2" parent="UI/MarginContainer2/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 898.0
margin_right = 958.0
margin_bottom = 143.0
label_text = "2"

[node name="UnitElement3" parent="UI/MarginContainer2/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 962.0
margin_right = 1022.0
margin_bottom = 143.0
label_text = "3"

[node name="UnitElement4" parent="UI/MarginContainer2/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1026.0
margin_right = 1086.0
margin_bottom = 143.0
label_text = "4"
